--- a/referencias.html
+++ b/referencias.html
@@ -133,7 +133,7 @@
 	<div class="blog-wrapper cf">
 		<div class="blog-container cf">
 			<article class="item"><div class="item-wrapper">
-					<div class="item-media"><a href="/l/reconstruccion-de-banos/"><div class="thumbnail wnd-orientation-landscape" id="wnd_ThumbnailBlock_3nadpi">
+					<div class="item-media"><a href="trabajos.html"><div class="thumbnail wnd-orientation-landscape" id="wnd_ThumbnailBlock_3nadpi">
 	<img src="https://muebles9636.webnode.cl/_files/200000002-c85b0c85b2/200/banca.jpg" alt="" width="960" height="720"><div class="thumbnail-bg">
 		<div class="thumbnail-bg-layer wnd-background-image" style="background-image:url('https://muebles9636.webnode.cl/_files/200000002-c85b0c85b2/450/banca.jpg')">
 			
