--- a/trabajos.html
+++ b/trabajos.html
@@ -247,7 +247,7 @@
 	<div class="c-c c-s-h cf"><div class="b-img b-img-default b b-s cf wnd-orientation-landscape wnd-type-image img-s-n" style="margin-left:0;margin-right:0;" id="wnd_ImageBlock_707206">
     <div class="b-img-w">
         <div class="b-img-c cf" style="padding-bottom:75%;text-align:center;">
-            <img src="https://muebles9636.webnode.cl/_files/200000004-4afd74afd9/200/mueble4.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="b-img-embed">
+            <img src="mueble4.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="b-img-embed">
                 </div>
         </div>
 
@@ -316,7 +316,7 @@
 	<div class="c-c c-s-h cf"><div class="b-img b-img-default b b-s cf wnd-orientation-portrait wnd-type-image img-s-n" style="margin-left:0;margin-right:0;" id="wnd_ImageBlock_727833">
     <div class="b-img-w">
         <div class="b-img-c cf" style="padding-bottom:165.37%;text-align:center;">
-            <img src="https://muebles9636.webnode.cl/_files/200000007-db980db982/200/mueble5.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="b-img-embed">
+            <img src="mueble5.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="b-img-embed">
                 </div>
         </div>
 
@@ -410,7 +410,7 @@
 	<div class="c-c c-s-h cf"><div class="b-img b-img-default b b-s cf wnd-orientation-portrait wnd-type-image img-s-n" style="margin-left:0;margin-right:0;" id="wnd_ImageBlock_645133">
     <div class="b-img-w">
         <div class="b-img-c cf" style="padding-bottom:232.71%;text-align:center;">
-            <img src="https://muebles9636.webnode.cl/_files/200000011-3aeaa3aeac/200/mueble6.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="b-img-embed">
+            <img src="mueble6.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="b-img-embed">
                 </div>
         </div>
 
@@ -443,7 +443,7 @@
 	<div class="c-c c-s-h cf"><div class="b-img b-img-default b b-s cf wnd-orientation-portrait wnd-type-image img-s-n" style="margin-left:0;margin-right:0;" id="wnd_ImageBlock_479756">
     <div class="b-img-w">
         <div class="b-img-c cf" style="padding-bottom:126.3%;text-align:center;">
-            <img src="https://muebles9636.webnode.cl/_files/200000012-eb065eb067/200/mueble10.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="b-img-embed">
+            <img src="mueble10.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="b-img-embed">
                 </div>
         </div>
 
@@ -479,7 +479,7 @@
 	<div class="c-c c-s-h cf"><div class="b-img b-img-default b b-s cf wnd-orientation-portrait wnd-type-image img-s-n" style="margin-left:0;margin-right:0;" id="wnd_ImageBlock_619725">
     <div class="b-img-w">
         <div class="b-img-c cf" style="padding-bottom:148.23%;text-align:center;">
-            <img src="https://muebles9636.webnode.cl/_files/200000013-441a8441aa/200/mueble9.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="b-img-embed">
+            <img src="mueble9.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="b-img-embed">
                 </div>
         </div>
 
