--- a/trabajos.html
+++ b/trabajos.html
@@ -30,7 +30,7 @@
 
 					<div class="logo logo-default proxima-nova wnd-logo-with-text wnd-image-vector">
     <div class="logo-content">
-        <a href="/home/">
+        <a href="index.html">
             
             <div class="logo-embed">
 	            <div class="logo-embed-cell">
