--- a/conoceme.html
+++ b/conoceme.html
@@ -140,7 +140,7 @@
 </div><div class="b-img b-img-default b b-s cf wnd-orientation-landscape wnd-type-image img-s-n" style="margin-left:12.78%;margin-right:12.78%;" id="wnd_ImageBlock_60776">
     <div class="b-img-w">
         <div class="b-img-c cf" style="padding-bottom:56.25%;text-align:center;">
-            <img src="https://muebles9636.webnode.cl/_files/200000010-9f5c29f5c4/200/maxresdefault.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="b-img-embed">
+            <img src="maxresdefault.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="b-img-embed">
                 </div>
         </div>
 
@@ -163,7 +163,7 @@
 	
 </div>
 							<div class="system-footer cf"><div class="sf">
-<div class="sf-content">Creado con <a href="https://www.webnode.es?utm_source=text&utm_medium=footer&utm_campaign=free1&utm_content=wnd2" rel="nofollow" target="_blank">Webnode</a></div>
+<div class="sf-content">Creado con <a href="https://www.webnode.es?utm_source=text&utm_medium=footer&utm_campaign=free1&utm_content=wnd2" rel="nofollow" target="_blank">Cariño</a></div>
 </div></div>
 						</div>
 					</div>
