--- a/conoceme.html
+++ b/conoceme.html
@@ -66,16 +66,16 @@
 		<span>Close Menu</span>
 	</a>
 	<ul class="level-1"><li class="wnd-homepage">
-			<a class="menu-item" href="/home/"><span class="menu-item-text">Inicio</span></a>
+			<a class="menu-item" href="index.html"><span class="menu-item-text">Inicio</span></a>
 			
 		</li><li>
-			<a class="menu-item" href="/referencias/"><span class="menu-item-text">Referencias</span></a>
+			<a class="menu-item" href="referencias.html"><span class="menu-item-text">Referencias</span></a>
 			
 		</li><li class="wnd-active wnd-active-path">
-			<a class="menu-item" href="/conoceme/"><span class="menu-item-text">Conóceme</span></a>
+			<a class="menu-item" href="conoceme.html"><span class="menu-item-text">Conóceme</span></a>
 			
 		</li><li>
-			<a class="menu-item" href="/contactame/"><span class="menu-item-text">Contáctame</span></a>
+			<a class="menu-item" href="contacto.html"><span class="menu-item-text">Contáctame</span></a>
 			
 		</li>
 	</ul><span class="more-text">Más</span>
