--- a/conoceme.html
+++ b/conoceme.html
@@ -163,7 +163,7 @@
 	
 </div>
 							<div class="system-footer cf"><div class="sf">
-<div class="sf-content">Creado con <a href="https://www.webnode.es?utm_source=text&utm_medium=footer&utm_campaign=free1&utm_content=wnd2" rel="nofollow" target="_blank">Cariño</a></div>
+<div class="sf-content">Creado con <a href="index.html" rel="nofollow" target="_blank">Cariño</a></div>
 </div></div>
 						</div>
 					</div>
